Nabi Web icon update
git-svn-id: http://kldp.net/svn/nabi/trunk@483 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/web/nabi.css
+++ b/web/nabi.css
@@ -4,7 +4,7 @@
 body {
   background: white;
   color: black;
-  font-family: arial,helvetica,sans-serif;
+  font-family: arial,helvetica, "UnBatang", sans-serif;
   margin: 0px;
   padding: 0px;
 }
